<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/timeStopWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="00:00:00"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeStopWatch">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/start"
            android:textSize="20sp"
            app:icon="@drawable/baseline_play_arrow_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="20sp"
            app:icon="@drawable/baseline_replay_24" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgStopWatch"
        android:layout_width="274dp"
        android:layout_height="231dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="69dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/c" />

    <Button
        android:id="@+id/btnInterval"
        android:layout_width="50dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        app:icon="@drawable/baseline_add_24"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgStopWatch" />

    <ListView
        android:id="@+id/listIntervals"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInterval" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Stopwatch"
            app:drawableTopCompat="@drawable/timer"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="683dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClickTimer"
            android:text="@string/timer"
            android:textColor="#787878"
            app:drawableTopCompat="@drawable/sand_clock"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="686dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>