<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvHour"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:onClick="onClickHour"
            android:text="00"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text=":"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMinute"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:onClick="onClickMinute"
            android:text="00"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text=":"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSecond"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:onClick="onClickSecond"
            android:text="00"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:background="@color/start"
        android:onClick="onClickStart"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClickStopWatch"
            android:text="@string/Stopwatch"
            android:textColor="#FF787878"
            app:drawableTopCompat="@drawable/baseline_timer_24g"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="683dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/timer"
            app:drawableTopCompat="@drawable/sand_clock_b"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="686dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="onClickClear"
        android:text="@string/clear"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>